# perfetto-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.claude/commands/: add-cloud-provider.md  shipit.md
.github/: build-setup.yml
.github/workflows/: release.yml
assets/: home_logo.txt  perfetto.toml
docs/: perfetto-recorder-config-reference.md
proto/: trace_processor.proto
scripts/: release.sh
src/: app.rs  main.rs  maintenance.rs  ui_server.rs
src/adb/: device.rs  mod.rs
src/cloud/: amazon_s3.rs  google_drive.rs  mod.rs  oauth.rs  upload.rs
src/config/: mod.rs
src/db/: command_sets.rs  configs.rs  devices.rs  mod.rs  saved_queries.rs  schema.sql  sessions.rs  traces.rs
src/import/: benchmark_json.rs  discovery.rs  mod.rs
src/perfetto/: capture.rs  commands.rs  config.rs  mod.rs  presets.rs  textproto.rs
src/session/: mod.rs
src/trace_processor/: binary.rs  client.rs  http.rs  mod.rs  proto.rs  query.rs
src/tui/: chrome.rs  event.rs  mod.rs  text_input.rs  theme.rs
src/tui/screens/: capture.rs  cloud_providers.rs  command_set_editor.rs  command_set_list.rs  config_editor.rs  config_import.rs  config_list.rs  device_picker.rs  mod.rs  new_session.rs  session_detail.rs  sessions_list.rs  theme_picker.rs
src/tui/screens/analysis/: completion.rs  library.rs  mod.rs  repl.rs  schema_browser.rs  summary.rs  worker.rs
src/tui/screens/diff/: mod.rs  row.rs  worker.rs
