[package]
name = "perfetto-cli"
version = "0.3.1"
edition = "2024"
description = "A Rust TUI for managing Android Perfetto trace sessions."
repository = "https://github.com/r0adkll/perfetto-cli"
homepage = "https://github.com/r0adkll/perfetto-cli"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
cli-clipboard = "0.4.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
ratatui = "0.30.0"
ratatui-textarea = "0.9.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny_http = "0.12.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
opaline = { version = "0.4", features = ["global-state", "discovery", "widgets", "builtin-themes", "ratatui"] }
urlencoding = "2.1.3"
webbrowser = "1.2.0"

# Release profile tuned for distributed binaries. `lto = "thin"` is the
# sweet spot between binary size and link time, `codegen-units = 1` lets
# the optimizer see the whole crate, and `strip = "symbols"` roughly halves
# the final size by dropping debug symbols.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
